# imgpmulti-reporting

./: README.md  pyproject.toml
config/: reporting.example.toml
docs/: ARCHITECTURE.md  DATA_CONTRACTS.md  OPERATIONS.md
src/authoritative_pnl/: __init__.py  cli.py  settings.py
src/authoritative_pnl/api/: app.py  routes.py
src/authoritative_pnl/connectors/: account_registry.py  market_registry.py  market_resolution.py  polymarket_activity.py  runtime_log.py
src/authoritative_pnl/models/: attribution.py  events.py  pnl.py
src/authoritative_pnl/pipeline/: __init__.py  build_attribution.py  compute_pnl.py  ingest_activity.py  ingest_attribution_context.py  materialize_reports.py
src/authoritative_pnl/quality/: __init__.py  checks.py  reconcile.py
src/authoritative_pnl/store/: sqlite_store.py
src/authoritative_pnl/store/migrations/: README.md
tests/: __init__.py
tests/integration/: test_pipeline.py
tests/unit/: test_models.py
